<resources>
    <string name="titulo">Qual o tema do Poema?</string>
    <string name="max_caracteres">(máximo de 50 caracteres)</string>
    <string name="tint_tema">Tema, Ex: O ceú, Os ocenaos, O amor ...</string>
    <string name="btn_text">Gerar</string>
    <string name="orientation">(Obs.: Aperte no botão quantas vezes quiser para gerar poemas com o mesmo tema, ou mude o tema e continue gerando quantas vezes quiser!)</string>
    <string name="copy_poem">Copiar Poema</string>
    <string name="app_name">PoemGenerator</string>
    <string name="string_1">Por favor, insira um tema antes de gerar o poema.</string>
    <string name="string_2">Texto inválido! Remova caracteres especiais ou e-mails.</string>
    <string name="write_poem1">Escreva um poema inspirado no tema</string>
    <string name="write_poem2">Explore emoções, memórias ou reflexões relacionadas a esse tema.</string>
    <string name="string_3">Texto Gerado</string>
    <string name="string_4">Texto copiado para a área de transferência.</string>
    <string name="string_5">Nada para copiar.</string>
    <string name="model_name">gemini-1.5-flash</string>
    <string name="key">AIzaSyB2lqMX2iU3XPJiGD114ljiSyUnX-LNow0</string>
    <string name="string_6">Nenhum poema foi gerado. Tente novamente.</string>
    <string name="string_7">Erro ao gerar poema:</string>
    <string name="string_8">Gerando</string>
    <string name="empt_text">Gerando</string>
    <string name="size_poem">Qual o tamanho do poema?</string>
    <string name="medium">Médio</string>
    <string name="tiny">Pequeno</string>
    <string name="big">Grande</string>
    <string name="string_9">Por favor, escolha o tamanho do poema (Pequeno, Médio ou Grande).</string>
    <string name="with">com</string>
    <string name="stanzas">estrofes</string>


</resources>